smallC.output
语法

    0 $accept: PROGRAM $end

    1 PROGRAM: EXTDEFS

    2 EXTDEFS: EXTDEF EXTDEFS
    3        | %empty

    4 EXTDEF: SPEC EXTVARS SEMI
    5       | SPEC FUNC STMTBLOCK

    6 EXTVARS: EXTVAR
    7        | %empty

    8 EXTVAR: DEC
    9       | DEC COMMA EXTVAR

   10 SPEC: TYPE
   11     | STSPEC

   12 STSPEC: STRUCT OPTTAG LC DEFS RC
   13       | STRUCT ID

   14 OPTTAG: ID
   15       | %empty

   16 VAR: ID
   17    | VAR LB INT RB

   18 FUNC: ID LP PARAS RP

   19 PARAS: PARASF
   20      | %empty

   21 PARASF: PARA COMMA PARASF
   22       | PARA

   23 PARA: SPEC VAR

   24 STMTBLOCK: LC DEFS STMTS RC

   25 STMTS: STMT STMTS
   26      | %empty

   27 STMT: EXP SEMI
   28     | STMTBLOCK
   29     | RETURN EXP SEMI
   30     | IF LP EXP RP STMT ESTMT
   31     | FOR LP FEXP SEMI FEXP SEMI EXP RP STMT
   32     | CONT SEMI
   33     | BREAK SEMI
   34     | READ LP EXP RP SEMI
   35     | WRITE LP EXP RP SEMI

   36 ESTMT: ELSE STMT
   37      | %empty

   38 DEFS: DEF DEFS
   39     | %empty

   40 DEF: SPEC DECS SEMI

   41 DECS: DEC COMMA DECS
   42     | DEC

   43 DEC: VAR
   44    | VAR ASSIGNOP INIT

   45 INIT: EXP
   46     | LC ARGS RC

   47 FEXP: EXP
   48     | %empty

   49 EXP: EXP MUL EXP
   50    | EXP DIV EXP
   51    | EXP MOD EXP
   52    | EXP PLUS EXP
   53    | EXP MINUS EXP
   54    | EXP SHL EXP
   55    | EXP SHR EXP
   56    | EXP GT EXP
   57    | EXP LT EXP
   58    | EXP GE EXP
   59    | EXP LE EXP
   60    | EXP EQU EXP
   61    | EXP NEQ EXP
   62    | EXP BITAND EXP
   63    | EXP BITOR EXP
   64    | EXP BITXOR EXP
   65    | EXP LOGAND EXP
   66    | EXP LOGOR EXP
   67    | EXP ASSIGNOP EXP
   68    | EXP PLUS_ASSIGN EXP
   69    | EXP MINUS_ASSIGN EXP
   70    | EXP MUL_ASSIGN EXP
   71    | EXP DIV_ASSIGN EXP
   72    | EXP AND_ASSIGN EXP
   73    | EXP XOR_ASSIGN EXP
   74    | EXP OR_ASSIGN EXP
   75    | EXP SHR_ASSIGN EXP
   76    | EXP SHL_ASSIGN EXP
   77    | MINUS EXP
   78    | LOGNOT EXP
   79    | BITNOT EXP
   80    | PLUSPLUS EXP
   81    | MINUSMINUS EXP
   82    | LP EXP RP
   83    | ID LP ARGS RP
   84    | ID ARRS
   85    | EXP DOT ID
   86    | INT

   87 ARRS: LB EXP RB ARRS
   88     | %empty

   89 ARGS: EXP COMMA ARGS
   90     | EXP


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 17 86
ID (259) 13 14 16 18 83 84 85
SEMI (260) 4 27 29 31 32 33 34 35 40
COMMA (261) 9 21 41 89
TYPE (262) 10
STRUCT (263) 12 13
RETURN (264) 29
IF (265) 30
ELSE (266) 36
BREAK (267) 33
CONT (268) 32
FOR (269) 31
READ (270) 34
WRITE (271) 35
LC (272) 12 24 46
RC (273) 12 24 46
ASSIGNOP (274) 44 67
PLUS_ASSIGN (275) 68
MINUS_ASSIGN (276) 69
MUL_ASSIGN (277) 70
DIV_ASSIGN (278) 71
AND_ASSIGN (279) 72
XOR_ASSIGN (280) 73
OR_ASSIGN (281) 74
SHL_ASSIGN (282) 76
SHR_ASSIGN (283) 75
LOGOR (284) 66
LOGAND (285) 65
BITOR (286) 63
BITXOR (287) 64
BITAND (288) 62
EQU (289) 60
NEQ (290) 61
GT (291) 56
LT (292) 57
GE (293) 58
LE (294) 59
SHL (295) 54
SHR (296) 55
PLUS (297) 52
MINUS (298) 53 77
MUL (299) 49
DIV (300) 50
MOD (301) 51
LOGNOT (302) 78
MINUSMINUS (303) 81
PLUSPLUS (304) 80
BITNOT (305) 79
LP (306) 18 30 31 34 35 82 83
RP (307) 18 30 31 34 35 82 83
LB (308) 17 87
RB (309) 17 87
DOT (310) 85
LOWER_ELSE (311)


Nonterminals, with rules where they appear

$accept (57)
    左： 0
PROGRAM (58)
    左： 1, 右： 0
EXTDEFS (59)
    左： 2 3, 右： 1 2
EXTDEF (60)
    左： 4 5, 右： 2
EXTVARS (61)
    左： 6 7, 右： 4
EXTVAR (62)
    左： 8 9, 右： 6 9
SPEC (63)
    左： 10 11, 右： 4 5 23 40
STSPEC (64)
    左： 12 13, 右： 11
OPTTAG (65)
    左： 14 15, 右： 12
VAR (66)
    左： 16 17, 右： 17 23 43 44
FUNC (67)
    左： 18, 右： 5
PARAS (68)
    左： 19 20, 右： 18
PARASF (69)
    左： 21 22, 右： 19 21
PARA (70)
    左： 23, 右： 21 22
STMTBLOCK (71)
    左： 24, 右： 5 28
STMTS (72)
    左： 25 26, 右： 24 25
STMT (73)
    左： 27 28 29 30 31 32 33 34 35, 右： 25 30 31 36
ESTMT (74)
    左： 36 37, 右： 30
DEFS (75)
    左： 38 39, 右： 12 24 38
DEF (76)
    左： 40, 右： 38
DECS (77)
    左： 41 42, 右： 40 41
DEC (78)
    左： 43 44, 右： 8 9 41 42
INIT (79)
    左： 45 46, 右： 44
FEXP (80)
    左： 47 48, 右： 31
EXP (81)
    左： 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86, 右：
    27 29 30 31 34 35 45 47 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    85 87 89 90
ARRS (82)
    左： 87 88, 右： 84 87
ARGS (83)
    左： 89 90, 右： 46 83 89


State 0

    0 $accept: . PROGRAM $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    PROGRAM  转到状态 3
    EXTDEFS  转到状态 4
    EXTDEF   转到状态 5
    SPEC     转到状态 6
    STSPEC   转到状态 7


State 1

   10 SPEC: TYPE .

    $default  reduce using rule 10 (SPEC)


State 2

   12 STSPEC: STRUCT . OPTTAG LC DEFS RC
   13       | STRUCT . ID

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OPTTAG)

    OPTTAG  转到状态 9


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 10


State 4

    1 PROGRAM: EXTDEFS .

    $default  reduce using rule 1 (PROGRAM)


State 5

    2 EXTDEFS: EXTDEF . EXTDEFS

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    EXTDEFS  转到状态 11
    EXTDEF   转到状态 5
    SPEC     转到状态 6
    STSPEC   转到状态 7


State 6

    4 EXTDEF: SPEC . EXTVARS SEMI
    5       | SPEC . FUNC STMTBLOCK

    ID  shift, and go to state 12

    $default  reduce using rule 7 (EXTVARS)

    EXTVARS  转到状态 13
    EXTVAR   转到状态 14
    VAR      转到状态 15
    FUNC     转到状态 16
    DEC      转到状态 17


State 7

   11 SPEC: STSPEC .

    $default  reduce using rule 11 (SPEC)


State 8

   13 STSPEC: STRUCT ID .
   14 OPTTAG: ID .

    LC        reduce using rule 14 (OPTTAG)
    $default  reduce using rule 13 (STSPEC)


State 9

   12 STSPEC: STRUCT OPTTAG . LC DEFS RC

    LC  shift, and go to state 18


State 10

    0 $accept: PROGRAM $end .

    $default  接受


State 11

    2 EXTDEFS: EXTDEF EXTDEFS .

    $default  reduce using rule 2 (EXTDEFS)


State 12

   16 VAR: ID .
   18 FUNC: ID . LP PARAS RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VAR)


State 13

    4 EXTDEF: SPEC EXTVARS . SEMI

    SEMI  shift, and go to state 20


State 14

    6 EXTVARS: EXTVAR .

    $default  reduce using rule 6 (EXTVARS)


State 15

   17 VAR: VAR . LB INT RB
   43 DEC: VAR .
   44    | VAR . ASSIGNOP INIT

    ASSIGNOP  shift, and go to state 21
    LB        shift, and go to state 22

    $default  reduce using rule 43 (DEC)


State 16

    5 EXTDEF: SPEC FUNC . STMTBLOCK

    LC  shift, and go to state 23

    STMTBLOCK  转到状态 24


State 17

    8 EXTVAR: DEC .
    9       | DEC . COMMA EXTVAR

    COMMA  shift, and go to state 25

    $default  reduce using rule 8 (EXTVAR)


State 18

   12 STSPEC: STRUCT OPTTAG LC . DEFS RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 27
    DEF     转到状态 28


State 19

   18 FUNC: ID LP . PARAS RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 20 (PARAS)

    SPEC    转到状态 29
    STSPEC  转到状态 7
    PARAS   转到状态 30
    PARASF  转到状态 31
    PARA    转到状态 32


State 20

    4 EXTDEF: SPEC EXTVARS SEMI .

    $default  reduce using rule 4 (EXTDEF)


State 21

   44 DEC: VAR ASSIGNOP . INIT

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    LC          shift, and go to state 35
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    INIT  转到状态 42
    EXP   转到状态 43


State 22

   17 VAR: VAR LB . INT RB

    INT  shift, and go to state 44


State 23

   24 STMTBLOCK: LC . DEFS STMTS RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 45
    DEF     转到状态 28


State 24

    5 EXTDEF: SPEC FUNC STMTBLOCK .

    $default  reduce using rule 5 (EXTDEF)


State 25

    9 EXTVAR: DEC COMMA . EXTVAR

    ID  shift, and go to state 46

    EXTVAR  转到状态 47
    VAR     转到状态 15
    DEC     转到状态 17


State 26

   40 DEF: SPEC . DECS SEMI

    ID  shift, and go to state 46

    VAR   转到状态 15
    DECS  转到状态 48
    DEC   转到状态 49


State 27

   12 STSPEC: STRUCT OPTTAG LC DEFS . RC

    RC  shift, and go to state 50


State 28

   38 DEFS: DEF . DEFS

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 51
    DEF     转到状态 28


State 29

   23 PARA: SPEC . VAR

    ID  shift, and go to state 46

    VAR  转到状态 52


State 30

   18 FUNC: ID LP PARAS . RP

    RP  shift, and go to state 53


State 31

   19 PARAS: PARASF .

    $default  reduce using rule 19 (PARAS)


State 32

   21 PARASF: PARA . COMMA PARASF
   22       | PARA .

    COMMA  shift, and go to state 54

    $default  reduce using rule 22 (PARASF)


State 33

   86 EXP: INT .

    $default  reduce using rule 86 (EXP)


State 34

   83 EXP: ID . LP ARGS RP
   84    | ID . ARRS

    LP  shift, and go to state 55
    LB  shift, and go to state 56

    $default  reduce using rule 88 (ARRS)

    ARRS  转到状态 57


State 35

   46 INIT: LC . ARGS RC

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP   转到状态 58
    ARGS  转到状态 59


State 36

   77 EXP: MINUS . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 60


State 37

   78 EXP: LOGNOT . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 61


State 38

   81 EXP: MINUSMINUS . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 62


State 39

   80 EXP: PLUSPLUS . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 63


State 40

   79 EXP: BITNOT . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 64


State 41

   82 EXP: LP . EXP RP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 65


State 42

   44 DEC: VAR ASSIGNOP INIT .

    $default  reduce using rule 44 (DEC)


State 43

   45 INIT: EXP .
   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   85    | EXP . DOT ID

    ASSIGNOP      shift, and go to state 66
    PLUS_ASSIGN   shift, and go to state 67
    MINUS_ASSIGN  shift, and go to state 68
    MUL_ASSIGN    shift, and go to state 69
    DIV_ASSIGN    shift, and go to state 70
    AND_ASSIGN    shift, and go to state 71
    XOR_ASSIGN    shift, and go to state 72
    OR_ASSIGN     shift, and go to state 73
    SHL_ASSIGN    shift, and go to state 74
    SHR_ASSIGN    shift, and go to state 75
    LOGOR         shift, and go to state 76
    LOGAND        shift, and go to state 77
    BITOR         shift, and go to state 78
    BITXOR        shift, and go to state 79
    BITAND        shift, and go to state 80
    EQU           shift, and go to state 81
    NEQ           shift, and go to state 82
    GT            shift, and go to state 83
    LT            shift, and go to state 84
    GE            shift, and go to state 85
    LE            shift, and go to state 86
    SHL           shift, and go to state 87
    SHR           shift, and go to state 88
    PLUS          shift, and go to state 89
    MINUS         shift, and go to state 90
    MUL           shift, and go to state 91
    DIV           shift, and go to state 92
    MOD           shift, and go to state 93
    DOT           shift, and go to state 94

    $default  reduce using rule 45 (INIT)


State 44

   17 VAR: VAR LB INT . RB

    RB  shift, and go to state 95


State 45

   24 STMTBLOCK: LC DEFS . STMTS RC

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    RETURN      shift, and go to state 96
    IF          shift, and go to state 97
    BREAK       shift, and go to state 98
    CONT        shift, and go to state 99
    FOR         shift, and go to state 100
    READ        shift, and go to state 101
    WRITE       shift, and go to state 102
    LC          shift, and go to state 23
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    $default  reduce using rule 26 (STMTS)

    STMTBLOCK  转到状态 103
    STMTS      转到状态 104
    STMT       转到状态 105
    EXP        转到状态 106


State 46

   16 VAR: ID .

    $default  reduce using rule 16 (VAR)


State 47

    9 EXTVAR: DEC COMMA EXTVAR .

    $default  reduce using rule 9 (EXTVAR)


State 48

   40 DEF: SPEC DECS . SEMI

    SEMI  shift, and go to state 107


State 49

   41 DECS: DEC . COMMA DECS
   42     | DEC .

    COMMA  shift, and go to state 108

    $default  reduce using rule 42 (DECS)


State 50

   12 STSPEC: STRUCT OPTTAG LC DEFS RC .

    $default  reduce using rule 12 (STSPEC)


State 51

   38 DEFS: DEF DEFS .

    $default  reduce using rule 38 (DEFS)


State 52

   17 VAR: VAR . LB INT RB
   23 PARA: SPEC VAR .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (PARA)


State 53

   18 FUNC: ID LP PARAS RP .

    $default  reduce using rule 18 (FUNC)


State 54

   21 PARASF: PARA COMMA . PARASF

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    SPEC    转到状态 29
    STSPEC  转到状态 7
    PARASF  转到状态 109
    PARA    转到状态 32


State 55

   83 EXP: ID LP . ARGS RP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP   转到状态 58
    ARGS  转到状态 110


State 56

   87 ARRS: LB . EXP RB ARRS

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 111


State 57

   84 EXP: ID ARRS .

    $default  reduce using rule 84 (EXP)


State 58

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   85    | EXP . DOT ID
   89 ARGS: EXP . COMMA ARGS
   90     | EXP .

    COMMA         shift, and go to state 112
    ASSIGNOP      shift, and go to state 66
    PLUS_ASSIGN   shift, and go to state 67
    MINUS_ASSIGN  shift, and go to state 68
    MUL_ASSIGN    shift, and go to state 69
    DIV_ASSIGN    shift, and go to state 70
    AND_ASSIGN    shift, and go to state 71
    XOR_ASSIGN    shift, and go to state 72
    OR_ASSIGN     shift, and go to state 73
    SHL_ASSIGN    shift, and go to state 74
    SHR_ASSIGN    shift, and go to state 75
    LOGOR         shift, and go to state 76
    LOGAND        shift, and go to state 77
    BITOR         shift, and go to state 78
    BITXOR        shift, and go to state 79
    BITAND        shift, and go to state 80
    EQU           shift, and go to state 81
    NEQ           shift, and go to state 82
    GT            shift, and go to state 83
    LT            shift, and go to state 84
    GE            shift, and go to state 85
    LE            shift, and go to state 86
    SHL           shift, and go to state 87
    SHR           shift, and go to state 88
    PLUS          shift, and go to state 89
    MINUS         shift, and go to state 90
    MUL           shift, and go to state 91
    DIV           shift, and go to state 92
    MOD           shift, and go to state 93
    DOT           shift, and go to state 94

    $default  reduce using rule 90 (ARGS)


State 59

   46 INIT: LC ARGS . RC

    RC  shift, and go to state 113


State 60

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   77    | MINUS EXP .
   85    | EXP . DOT ID

    DOT  shift, and go to state 94

    $default  reduce using rule 77 (EXP)


State 61

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   78    | LOGNOT EXP .
   85    | EXP . DOT ID

    DOT  shift, and go to state 94

    $default  reduce using rule 78 (EXP)


State 62

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   81    | MINUSMINUS EXP .
   85    | EXP . DOT ID

    DOT  shift, and go to state 94

    $default  reduce using rule 81 (EXP)


State 63

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   80    | PLUSPLUS EXP .
   85    | EXP . DOT ID

    DOT  shift, and go to state 94

    $default  reduce using rule 80 (EXP)


State 64

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   79    | BITNOT EXP .
   85    | EXP . DOT ID

    DOT  shift, and go to state 94

    $default  reduce using rule 79 (EXP)


State 65

   49 EXP: EXP . MUL EXP
   50    | EXP . DIV EXP
   51    | EXP . MOD EXP
   52    | EXP . PLUS EXP
   53    | EXP . MINUS EXP
   54    | EXP . SHL EXP
   55    | EXP . SHR EXP
   56    | EXP . GT EXP
   57    | EXP . LT EXP
   58    | EXP . GE EXP
   59    | EXP . LE EXP
   60    | EXP . EQU EXP
   61    | EXP . NEQ EXP
   62    | EXP . BITAND EXP
   63    | EXP . BITOR EXP
   64    | EXP . BITXOR EXP
   65    | EXP . LOGAND EXP
   66    | EXP . LOGOR EXP
   67    | EXP . ASSIGNOP EXP
   68    | EXP . PLUS_ASSIGN EXP
   69    | EXP . MINUS_ASSIGN EXP
   70    | EXP . MUL_ASSIGN EXP
   71    | EXP . DIV_ASSIGN EXP
   72    | EXP . AND_ASSIGN EXP
   73    | EXP . XOR_ASSIGN EXP
   74    | EXP . OR_ASSIGN EXP
   75    | EXP . SHR_ASSIGN EXP
   76    | EXP . SHL_ASSIGN EXP
   82    | LP EXP . RP
   85    | EXP . DOT ID

    ASSIGNOP      shift, and go to state 66
    PLUS_ASSIGN   shift, and go to state 67
    MINUS_ASSIGN  shift, and go to state 68
    MUL_ASSIGN    shift, and go to state 69
    DIV_ASSIGN    shift, and go to state 70
    AND_ASSIGN    shift, and go to state 71
    XOR_ASSIGN    shift, and go to state 72
    OR_ASSIGN     shift, and go to state 73
    SHL_ASSIGN    shift, and go to state 74
    SHR_ASSIGN    shift, and go to state 75
    LOGOR         shift, and go to state 76
    LOGAND        shift, and go to state 77
    BITOR         shift, and go to state 78
    BITXOR        shift, and go to state 79
    BITAND        shift, and go to state 80
    EQU           shift, and go to state 81
    NEQ           shift, and go to state 82
    GT            shift, and go to state 83
    LT            shift, and go to state 84
    GE            shift, and go to state 85
    LE            shift, and go to state 86
    SHL           shift, and go to state 87
    SHR           shift, and go to state 88
    PLUS          shift, and go to state 89
    MINUS         shift, and go to state 90
    MUL           shift, and go to state 91
    DIV           shift, and go to state 92
    MOD           shift, and go to state 93
    RP            shift, and go to state 114
    DOT           shift, and go to state 94


State 66

   67 EXP: EXP ASSIGNOP . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 115


State 67

   68 EXP: EXP PLUS_ASSIGN . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 116


State 68

   69 EXP: EXP MINUS_ASSIGN . EXP

    INT         shift, and go to state 33
    ID          shift, and go to state 34
    MINUS       shift, and go to state 36
    LOGNOT      shift, and go to state 37
    MINUSMINUS  shift, and go to state 38
    PLUSPLUS    shift, and go to state 39
    BITNOT      shift, and go to state 40
    LP          shift, and go to state 41

    EXP  转到状态 117


State 69

   70 EXP: EXP MUL_ASSIGN . EXP
